# tawnia

./: .dockerignore  .env.example  .env.secure  .eslintrc.json  .gitignore  .snyk  DEPLOYMENT.md  Dockerfile  INTEGRATION-COMPLETE.md  PRODUCTION-READY.md  README.md  SECURITY-ENHANCEMENT-REPORT.md  SECURITY.md  SYSTEM_STATUS.md  UI-UX-ENHANCEMENTS.md  cloudflare-setup.md  deploy-api.js  deploy.bat  deploy.sh  git-setup.bat  main.py  main_enhanced.py  npm-shrinkwrap.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-lock.txt  requirements-minimal.txt  requirements.txt  run_python.py  security-scan.js  security_test.py  setup.bat  simple_test_report.json  start.bat  start_python.bat  test-manual.js  test-suite.js  test_core_system.py  (+12 more)
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  codeql.yml  dependency-review.yml  deploy.yml  security.yml
docs/: ARABIC_SYSTEM_GUIDE.md  BRAINSAIT_COMPLIANCE_CHECKLIST.md
functions/: _middleware.js
functions/api/: analyze.js
public/: INTEGRATION-GUIDE.md  brainsait-enhanced.html  index.html  insurance_verification.html  sw.js
public/css/: brainsait-design-system.css
public/js/: app.js  enhanced-app.js  tawnia-components.js  tawnia-integration-tests.js  tawnia-navigation.js
src/: server.js  worker.js  worker.ts
src/ai/: brainsait_ai_workflow.py  enhanced_insights.py  insights_generator.py
src/analysis/: analysisEngine.js  analysis_engine.py
src/middleware/: auth.js
src/models/: schemas.py
src/routes/: analyze.js  (+4 more)
tests/: api.test.js  comprehensive.test.js  processor.test.js
(+19 files in other folders)
